# Voxels

./: .gitignore  CMakeLists.txt  README.md  Voxels.sln
Voxels/: Voxels.vcxproj  Voxels.vcxproj.filters
Voxels/doc/: BlockData.txt
Voxels/lib/: assimp-vc143-mtd.exp
Voxels/res/block_data/: StoneBlock.txt
Voxels/res/shaders/: Block.vert  fragment.frag
Voxels/src/: Mesh.cpp  Mesh.h  Mesh_old.cpp  Mesh_old.h  Player.h  Refrences.cpp  Refrences.h  Texture.cpp  Texture.h  Texture_old.cpp  Texture_old.h  main.cpp
Voxels/src/engine/: Engine.cpp  Engine.h  Keyboard.h
Voxels/src/engine/graphics/: Camera.cpp  Shader.cpp  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  VertexBuffer.cpp  Window.cpp  Window.h
Voxels/src/engine/graphics/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.h
Voxels/src/world/: Chunk.cpp  Chunk.h  World.h
Voxels/src/world/voxels/: AirBlock.h  Block.cpp  Block.h  BlockID.h  ColoredBlock.h  StoneBlock.h  VoxelDataDictionary.h
bin-int/Debug-x64/Voxels/: Voxels.exe.recipe  vc143.idb
bin-int/Debug-x64/Voxels/Voxels.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Voxels.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/glad/: glad.h
lib/: assimp-vc143-mtd.lib  glfw3.lib
res/block_data/: grass_block.json
res/shaders/: Block.frag  Block.vert  vertex.vert
src/: Mesh_old.cpp  Mesh_old.h  Texture.cpp  Texture.h  glad.c  logger.h  main.cpp  voxel_unity.cpp
src/engine/: Engine.cpp  Engine.h  ShaderProgram.cpp  ShaderProgram.h
src/engine/graphics/: Camera.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/unity/: voxel_unity.cpp
src/world/: Chunk.cpp  Chunk.h  World.cpp  World.h  blockData.h
src/world/voxels/: Block.cpp  Block.h  BlockDataKeyword.h
